--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                   document.getElementById('ecbm_image').style.opacity = "1";
                 }
 
-                function aug_stop() {
+                function ecbm_stop() {
                   document.getElementById('ecbm_image').style.opacity = "0";
                 }
-                aug_stop()
+                ecbm_stop()
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -113,10 +113,61 @@
               <em>ICLR</em>, 2024
               <br>
               <a href="https://arxiv.org/abs/2401.14142">Paper</a>/<a href="https://github.com/xmed-lab/ECBM">Code</a>	
+              <br>
+              <br>
+              <span class="category_3">Interpretability</span>
               <p></p>
               <p>
                 We introduce Energy-Based Concept Bottleneck Models (ECBM) as a unified framework 
                 for concept-based prediction, concept correction, and fine-grained interpretations based on conditional probabilities.
+              </p>
+            </td>
+          </tr>
+
+          <tr onmouseout="grl_stop()" onmouseover="grl_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='est_image'>
+                  <img src='images/grl.png' width="160"></div>
+                <img src='images/grl.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function grl_start() {
+                  document.getElementById('grl_image').style.opacity = "1";
+                }
+
+                function grl_stop() {
+                  document.getElementById('grl_image').style.opacity = "0";
+                }
+                grl_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="">
+                <papertitle>Machine Learning Models for Evaluating Biological Reactivity within Molecular Fingerprints of Dissolved Organic Matter over time</papertitle>
+              </a>
+              <br>
+              Chen Zhao,
+              Kai Wang,
+              Qianji Jiao,
+              <strong>Xinyue Xu</strong>,
+              Yuanbi Yi,
+              Penghui Li,  
+              Julian Merder,
+              Ding He
+              <br>
+              <em>Geophysical Research Letters</em>, 2024
+              <br>
+              <a href="">Paper</a>	
+              <br>
+              <br>
+              <span class="category_2">AI4Science</span>
+              <span class="category_3">Interpretability</span>
+              <p>Machine learning models were built to correlate the molecular composition and biological reactivity at the world's largest reservoir.
+                Shorter incubations result in a broader range of molecules disappearing, with a greater contribution of stochasticity.
+                Tuning the machine learning model contributes to yield additional interpretability beyond its well-recognized predictive power.
+                </p>
+              <p>
               </p>
             </td>
           </tr>
@@ -152,6 +203,9 @@
               <em>ICONIP</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2305.15777">Paper</a>/<a href="https://github.com/xmed-lab/DDAug">Code</a>	
+              <br>
+              <br>
+              <span class="category_2">AI4Science</span>
               <p></p>
               <p>
                 Medical image data are often limited due to the expensive acquisition and annotation process. Hence, training a deep-learning model with only raw data can easily lead to overfitting.
@@ -196,9 +250,14 @@
               Ding He
               <br>
               <em>Environmental Science & Technology (ES&T)</em>, 2023
+              <br>
               <em>The 6th Xiamen Symposium on Marine Environmental Sciences, 2023</em>
               <br>
-              <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>i	
+              <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>	
+              <br>
+              <br>
+              <span class="category_2">AI4Science</span>
+              <span class="category_3">Interpretability</span>
               <p></p>
               <p>
                 Photochemical reactions are essential components altering dissolved organic matter (DOM) chemistry. 
@@ -236,7 +295,11 @@
               <em>Honours Thesis</em>, 2022
               <br>
               ANU Database.
-              <span class="category">Clustering</span>
+              <br>
+              <a href="https://github.com/Thea-Hsu/EILS">Code</a>	
+              <br>
+              <br>
+              <span class="category_2">AI4Science</span>
               <p></p>
               <p>
                 This thesis develops an enhanced version based on the original Iterative Label
@@ -277,7 +340,10 @@
               <br>
               <em>KDD Deep Learning on Graphs</em>, 2022  
               <br>
-							<a href="https://arxiv.org/abs/2207.06684">arXiv</a>		
+							<a href="https://arxiv.org/abs/2207.06684">arXiv</a>	
+              <br>
+              <br>
+              <span class="category_2">AI4Science</span>	
               <p></p>
               <p>Small subgraphs (graphlets) are important features to describe fundamental units of a large network.
                 Unfortunately due to the inherent complexity of this task, most of the existing methods are computationally intensive and inefficient. 
@@ -319,6 +385,10 @@
               <em>ICONIP</em>, 2021  
               <br>
 							<a href="https://link.springer.com/chapter/10.1007/978-3-030-92185-9_19">Paper</a>		
+              <br>
+              <br>
+              <span class="category_3">Interpretability</span>
+              <span class="category_2">AI4Science</span>	
               <p></p>
               <p>We use a variety of classification models to recognize the positive cases of SARS. 
                 We conduct evaluation with two types of SARS datasets, numerical and categorical types. 
