--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <ul>
               <li>Interpretable ML (Concept-Based Explanations, Rule-Based Models, etc.)</li>
               <li>AI4Science (medical image analysis, environmental science, material science etc.)</li>
-              <li>Multimodel LLM</li>
+              <li>Multimodal LLM</li>
               </ul>
             </p>
           </td>
