--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 where I had the privilege of being advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard"> Senior Prof. Amanda Barnard</a>
                 and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en"> Dr. Amanda Parker</a>.
                 My research journey includes experiences as a Research Assistant at MIT's Computational Connectomics Group lead by <a href="https://people.csail.mit.edu/shanir/"> Prof. Nir Shavit</a>,
-                where I had the opportunity to collaborate with <a href="http://www.wanghao.in/"> Prof. Hao Wang</a>  and <a href="http://people.csail.mit.edu/lumi/"> Dr. Lu Mi</a>.
+                where I had the opportunity to collaborate with <a href="http://www.wanghao.in/"> Prof. Hao Wang</a>  and <a href="https://lumimim.github.io/"> Prof. Lu Mi</a>.
                 Furthermore, I had served as a Research Assistant under the supervision of <a href="https://guo-gang.com/"> Dr. Gang Guo </a> at NUS.
               </p>
               <p style="text-align:center">
@@ -447,7 +447,7 @@
             <li>IEEE Member, since 2021</li>
             <li>Australian Computer Society Member, since 2021</li>
             <li>Asia Pacific Neural Network Society Member, since 2021</li>
-            <li>ICONIP 2023 PC Member</li>
+            <li>ICONIP PC Member, 2023 - 2024</li>
             <li>Teaching Assistant for ELEC 1200 A System View of Communications: from Signals to Packets, 2023</li>
           </ul> 
         </td>
