--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
             <li>IEEE Member, since 2021</li>
             <li>Australian Computer Society Member, since 2021</li>
             <li>Asia Pacific Neural Network Society Member, since 2021</li>
+            <li>ICLR Reviewer, 2025</li>
             <li>ICONIP PC Member, 2023 - 2024</li>
             <li>Teaching Assistant for ELEC 1200 A System View of Communications: from Signals to Packets, 2023</li>
           </ul> 
