--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
               <br>
               <em>KDD Deep Learning on Graphs</em>, 2022  
               <br>
-							<a href="https://arxiv.org/abs/2207.06684">arXiv</a>	
+							<a href="https://arxiv.org/abs/2207.06684">Paper</a>	
               <br>
               <br>
               <span class="category_2">AI4Science</span>	
