--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@
               <br>
               <em>Environmental Science & Technology (ES&T)</em>, 2023
               <br>
-              <em>The 6th Xiamen Symposium on Marine Environmental Sciences, 2023</em>
+              <em>Conference Version: Improved Understanding of Photochemical Processing of Dissolved Organic Matter by Using Machine Learning Approaches</em>
+              <br>
+              <em>The 6th Xiamen Symposium on Marine Environmental Sciences, 2023 (<span style="color: red;">Best Poster Award</span>)</em>
               <br>
               <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>	
               <br>
@@ -506,8 +508,8 @@
             <li>IEEE Graduate Student Member, since 2021</li>
             <li>Australian Computer Society Member, since 2021</li>
             <li>Asia Pacific Neural Network Society Member, since 2021</li>
-            <li>ICLR Reviewer, 2025</li>
             <li>ICONIP Program Committee Member, 2023 - 2024</li>
+            <li>ICLR Reviewer, 2025</li>
             <li>Teaching Assistant of Statistics of Stochastic Process & Algorithms and Analysis, 2021 (SJTU Summer School)</li>
             <li>Teaching Assistant of ELEC 1200 A System View of Communications: from Signals to Packets, Spring & Fall 2023 (HKUST)</li>
           </ul> 
