--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
               </p>
               <p>
 
-                I am currently a PhD candidate at The Hong Kong University of Science and Technology, working under the supervision of <a href="https://xmengli.github.io/">Prof. Xiaomeng Li</a> 
-                and co-supervised by <a href="http://www.wanghao.in/">Prof. Hao Wang</a> at Rutgers University. 
+                I am currently a PhD candidate at The Hong Kong University of Science and Technology, working under the supervision of <a href="https://xmengli.github.io/">Prof. Xiaomeng Li</a>.
                 Prior to this, I earned my Bachelor degree (with Honours) from The Australian National University, 
                 where I was fortunate to be advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard">Senior Prof. Amanda Barnard</a> and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en">Dr. Amanda Parker</a>.
 
@@ -297,11 +296,12 @@
               <br>
               <em>Environmental Science & Technology (ES&T)</em>, 2023
               <br>
-              <em>Conference Version: Improved Understanding of Photochemical Processing of Dissolved Organic Matter by Using Machine Learning Approaches</em>
+              <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>	
+              <br>
+              <br>
+              Improved Understanding of Photochemical Processing of Dissolved Organic Matter by Using Machine Learning Approaches (Conference Version)
               <br>
               <em>The 6th Xiamen Symposium on Marine Environmental Sciences, 2023 (<span style="color: red;">Best Poster Award</span>)</em>
-              <br>
-              <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>	
               <br>
               <br>
               <span class="category_2">AI4Science</span>
