--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 where I was fortunate to be advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard">Senior Prof. Amanda Barnard</a> and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en">Dr. Amanda Parker</a>.
 
                 My research journey has been enriched by valuable experiences, including serving as a Research assistant at MIT Computational Connectomics Group led by <a href="https://people.csail.mit.edu/shanir/">Prof. Nir Shavit</a>, 
-                where I had the privilege of collaborating with <a href="http://www.wanghao.in/">Prof. Hao Wang</a> and <a href="https://people.csail.mit.edu/lumi/">Prof. Lu Mi</a> (Georgia Institute of Technology). 
+                where I had the privilege of collaborating with <a href="http://www.wanghao.in/">Prof. Hao Wang</a> and <a href="https://people.csail.mit.edu/lumi/">Prof. Lu Mi</a>. 
                 Additionally, I worked as a Research assistant at the National University of Singapore, supervised by <a href="https://guo-gang.com/">Dr. Gang Guo</a>.
 
 
