--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </p>
               <p>
 
-                I am currently a PhD candidate at The Hong Kong University of Science and Technology, working under the supervision of <a href="https://xmengli.github.io/">Prof. Xiaomeng Li</a>.
+                I am currently a PhD student at The Hong Kong University of Science and Technology, working under the supervision of <a href="https://xmengli.github.io/">Prof. Xiaomeng Li</a>.
                 Prior to this, I earned my Bachelor degree (with Honours) from The Australian National University, 
                 where I was fortunate to be advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard">Senior Prof. Amanda Barnard</a> and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en">Dr. Amanda Parker</a>.
 
