--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <br>
               <em>ICML</em>, 2025
               <br>
-              <a href="">Paper</a>
+              <a href="https://arxiv.org/abs/2505.05195">Paper</a>
               <br>
               <br>
               <span class="category_3">Interpretability</span>
