--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
                 </p>
               <p style="text-align:center">
                 <a href="mailto:xinyuexu1999@gmail.com">Email</a> &nbsp/&nbsp
-                <a href="data/Resume_XinyueXU.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=9AthkQ0AAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://www.linkedin.com/in/xinyue-thea-xu-a15984179/">LinkedIn</a> 
+                <!-- <a href="data/Resume_XinyueXU.pdf">CV</a> &nbsp/&nbsp -->
+                <a href="https://scholar.google.com/citations?user=9AthkQ0AAAAJ&hl=zh-CN">Google Scholar</a> 
+                &nbsp/&nbsp
+                <a href="https://github.com/Thea-Hsu">Github</a>
+                <!-- <a href="https://www.linkedin.com/in/xinyue-thea-xu-a15984179/">LinkedIn</a>  -->
                 <!-- &nbsp/&nbsp -->
                 <!-- <a href="https://github.com/jonbarron/">Github</a> -->
               </p>
@@ -61,9 +63,9 @@
               <br>
               In particluar, I am interested in:
               <ul>
-              <li>Interpretable ML (Concept-Based Explanations, Rule-Based Models, etc.)</li>
-              <li>AI4Science (Healthcare, Environmental Science, Material Science etc.)</li>
-              <li>Large Language Models (Mechanistic Interpretability, Multimodal LLM)</li>
+              <li>Interpretable ML (Concept Bottleneck Models, Rule-based Reasoning, Attribution-based Explanations, etc.)</li>
+              <li>Large Language Models (Interpretability, Evaluation, Multimodal Reasoning, etc.)</li>
+              <li>AI4Science (Healthcare, Environmental Science, Material Science, etc.)</li>
               </ul>
             </p>
           </td>
@@ -117,7 +119,7 @@
               <br>
               <em>ICML</em>, 2025
               <br>
-              <a href="https://arxiv.org/abs/2505.05195">Paper</a>
+              <a href="https://arxiv.org/abs/2505.05195">Paper</a>/<a href="https://github.com/xmed-lab/CUDA">Code</a>	
               <br>
               <br>
               <span class="category_3">Interpretability</span>
@@ -537,9 +539,9 @@
           <heading>Honors and Awards</heading>
           <ul>
             <li>Hong Kong PhD Fellowship, 2022 - 2026</li>
-            <li>Conference Travel Allowance of HKPFS, 2023 - 2024</li>
+            <li>Conference Travel Allowance of HKPFS, 2023 - 2025</li>
             <li>HKUST RedBird PhD Award, 2022 - 2023</li>
-            <li>HKUST Academic Excellence Awards (Continuing Students), 2023 - 2024</li>
+            <li>HKUST Academic Excellence Awards (Continuing Students), 2023 - 2025</li>
           </ul> 
         </td>
       </tr>
@@ -553,8 +555,9 @@
             <li>IEEE Graduate Student Member, since 2021</li>
             <li>Australian Computer Society Member, since 2021</li>
             <li>Asia Pacific Neural Network Society Member, since 2021</li>
-            <li>ICONIP Program Committee Member, 2023 - 2024</li>
-            <li>ICLR Reviewer, 2025</li>
+            <li>ICONIP Program Committee Member, 2023 - 2025</li>
+            <li>ICLR Reviewer, 2025 - 2026</li>
+            <li>T-PAMI Reviewer</li>
             <li>Teaching Assistant of Statistics of Stochastic Process & Algorithms and Analysis, 2021 (SJTU Summer School)</li>
             <li>Teaching Assistant of ELEC 1200 A System View of Communications: from Signals to Packets, Spring & Fall 2023 (HKUST)</li>
           </ul> 
