--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <br>
               <em>ICML</em>, 2025
               <br>
-              <a href="https://arxiv.org/abs/2505.05195">Paper</a>/<a href="https://github.com/xmed-lab/CUDA">Code</a>	
+              <a href="https://arxiv.org/abs/2505.05195">Paper</a>&nbsp/&nbsp<a href="https://github.com/xmed-lab/CUDA">Code</a>	
               <br>
               <br>
               <span class="category_3">Interpretability</span>
@@ -162,7 +162,7 @@
               <br>
               <em>ICLR</em>, 2024
               <br>
-              <a href="https://arxiv.org/abs/2401.14142">Paper</a>/<a href="https://github.com/xmed-lab/ECBM">Code</a>	
+              <a href="https://arxiv.org/abs/2401.14142">Paper</a>&nbsp/&nbsp<a href="https://github.com/xmed-lab/ECBM">Code</a>	
               <br>
               <br>
               <span class="category_3">Interpretability</span>
@@ -294,7 +294,7 @@
               <br>
               <em>ICONIP</em>, 2023
               <br>
-              <a href="https://arxiv.org/abs/2305.15777">Paper</a>/<a href="https://github.com/xmed-lab/DDAug">Code</a>	
+              <a href="https://arxiv.org/abs/2305.15777">Paper</a>&nbsp/&nbsp<a href="https://github.com/xmed-lab/DDAug">Code</a>	
               <br>
               <br>
               <span class="category_2">AI4Science</span>
