--- a/index.html
+++ b/index.html
@@ -391,7 +391,9 @@
   <section class="section map-section">
     <div class="container center-text">
       <div id="map-container" style="margin-top: 20px;">
-        <p style="color:#aaa; font-size:14px;">[Visitor Map Placeholder]</p>
+        
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=n7WKxm-Uv1SuWAB0PGwr390RrQKo705FMusk-6GqKzY&cl=ffffff&w=a"></script>
+        
       </div>
     </div>
   </section>
