--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
 
   <section class="section map-section">
     <div class="container center-text">
-      <div id="map-container" style="margin-top: 20px;">
+      <div id="map-container" style="max-width: 250px; margin: 20px auto;">
         
-        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=n7WKxm-Uv1SuWAB0PGwr390RrQKo705FMusk-6GqKzY&cl=ffffff&w=a"></script>
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=n7WKxm-Uv1SuWAB0PGwr390RrQKo705FMusk-6GqKzY&cl=ffffff&w=250"></script>
         
       </div>
     </div>
