--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -33,7 +33,7 @@
       <div class="hero-text">
         <div class="intro">
           <p>
-            I am currently a final-year PhD student at <strong>The Hong Kong University of Science and Technology</strong>, 
+            I am currently a final-year PhD student at <strong>The Hong Kong University of Science and Technology (HKUST)</strong>, 
             working under the supervision of <a href="https://xmengli.github.io/">Prof. Xiaomeng Li</a>. 
             Additionally, I work closely with <a href="https://lijie-hu.github.io/">Prof. Lijie Hu</a> at <strong>MBZUAI</strong> 
             and <a href="https://scholar.google.com/citations?user=ylZQz2sAAAAJ&hl=en">Prof. Sichao Li</a> (Incoming Lecturer at <strong>The University of Sydney</strong>).
